Revision history for Perl distribution PathTools.

3.21  

 - Added a bunch of X<> tags to the File::Spec docs to help
   podindex. [Gabor Szabo]

3.19  Tue Jul 11 22:40:26 CDT 2006

 - When abs2rel() is called with two relative paths
   (e.g. abs2rel('foo/bar/baz', 'foo/bar')) the resolution algorithm
   needlessly called cwd() (twice!) to turn both arguments into
   absolute paths.  Now it avoids the cwd() calls with a workaround,
   making a big efficiency win when abs2rel() is called
   repeatedly. [Brendan O'Dea]

 - Added a build-time dependency on ExtUtils::Install version 1.39
   when on Windows.  This is necessary because version 1.39 knows how
   to replace an in-use Cwd shared library, but previous versions
   don't. [Suggested by Adam Kennedy]

 - Fixed File::Spec::Win32->canonpath('foo/../bar'), which was
   returning \bar, and now properly returns just bar. [Spotted by
   Heinrich Tegethoff]

3.18  Thu Apr 27 22:01:38 CDT 2006

 - Fixed some problems on VMS in which a directory called "0" would be
   treated as a second-class citizen. [Peter (Stig) Edwards]

 - Added a couple of regression tests to make sure abs2rel('/foo/bar',
   '/') works as expected.  [Chia-liang Kao]

 - Added a couple of regression tests to make sure catdir('/',
   'foo/bar') works as expected.  [Mark Grimes]

3.17  Fri Mar  3 16:52:30 CST 2006

 - The Cygwin version of Cwd::cwd() will croak if given any arguments
   (which can happen if, for example, it's called as Cwd->cwd).  Since
   that croaking is bad, we now wrap the original cwd() in a
   subroutine that ignores its arguments.  We could skip this wrapping
   if a future version of perl changes cygwin.c's cwd() to not barf
   when fed an argument. [Jerry D. Hedden]

3.16  Mon Jan 30 20:48:41 CST 2006

 - Updated to version 3.06 of ppport.h, which provides backward
   compatibility XS layers for older perl versions.

 - Clarify in the docs for File::Spec's abs2rel() and rel2abs()